# shelly-buienradar

./: .gitignore  README.md  example.json  pyproject.toml  requirements.txt  run_cloud.py  run_local.py  test_run_cloud.py
.github/workflows/: ci.yml
shelly_buienradar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/shelly_buienradar/: core.py
tests/: test_core.py  test_run_cloud.py
