[project]
name = "shelly-buienradar"
version = "0.1.0"
description = "Shelly sunscreen automation based on real-time weather data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.4.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "responses>=0.26.0",
    "ruff>=0.15.12",
]
